force-app/main/default/objects/Matching_Rule__c/Matching_Rule__c.object-meta.xml
<CustomObject>
    <label>Matching Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matching Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>