force-app/main/default/objects/Matching_Rule__c/fields/Evaluation_Order__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Order__c</fullName>
    <label>Evaluation Order</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>