force-app/main/default/objects/Matching_Rule__c/fields/Parent_Matching_Rule__c.field-meta.xml
<CustomField>
    <fullName>Parent_Matching_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Matching Rule</label>
    <referenceTo>Matching_Rule__c</referenceTo>
    <relationshipLabel>Matching Rules</relationshipLabel>
    <relationshipName>Matching_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>