force-app/main/default/objects/Matching_Rule__c/fields/Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Name__c</fullName>
    <label>Relationship Name</label>
    <type>TextArea</type>
</CustomField>