force-app/main/default/objects/Matching_Rule__c/fields/Support_Text__c.field-meta.xml
<CustomField>
    <fullName>Support_Text__c</fullName>
    <label>Support Text</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>