force-app/main/default/objects/Matching_Rule__c/listViews/All_Parent_Rules.listView-meta.xml
<ListView>
    <fullName>All_Parent_Rules</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_Matching_Rule__c</field>
        <operation>equals</operation>
    </filters>
    <label>All Parent Rules</label>
    <language>en_US</language>
</ListView>